--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,28 +1,28 @@
   <!-- Nav -->
   <nav id="nav">
     <ul>
-      <li><a routerLink="./Inicio">Inicio</a></li>
+      <li><a href="./Inicio">Inicio</a></li>
       <li>
-        <a routerLink="./EnConstruccion">San Roque En Cifras</a>
+        <a href="./Error">San Roque En Cifras</a>
         <ul>
-          <li><a routerLink="">Lorem ipsum dolor</a></li>
-          <li><a routerLink="">Magna phasellus</a></li>
-          <li><a routerLink="">Etiam dolore nisl</a></li>
+          <li><a href="">Lorem ipsum dolor</a></li>
+          <li><a href="">Magna phasellus</a></li>
+          <li><a href="">Etiam dolore nisl</a></li>
           <li>
             <a routerLink="">And a submenu &hellip;</a>
             <ul>
               <li><a routerLink="">Lorem ipsum dolor</a></li>
-              <li><a routerLink="">Phasellus consequat</a></li>
-              <li><a routerLink="">Magna phasellus</a></li>
-              <li><a routerLink="">Etiam dolore nisl</a></li>
+              <li><a href="">Phasellus consequat</a></li>
+              <li><a href="">Magna phasellus</a></li>
+              <li><a href="">Etiam dolore nisl</a></li>
             </ul>
           </li>
-          <li><a routerLink="">Veroeros feugiat</a></li>
+          <li><a href="">Veroeros feugiat</a></li>
         </ul>
       </li>
-      <li><a routerLink="./EnConstruccion">Acerca del Proyecto</a></li>
-      <li><a routerLink="./NuestroEquipo">Nuestro Equipo</a></li>
-      <li><a routerLink="./NuestraComunidad">Nuestra Comunidad</a></li>
-      <li><a routerLink="./EnConstruccion">Contactos</a></li>
+      <li><a href="./Error">Acerca del Proyecto</a></li>
+      <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
+      <li><a href="./NuestraComunidad">Nuestra Comunidad</a></li>
+      <li><a href="./Contacto">Contactos</a></li>
     </ul>
   </nav>
