Actualización de Rutas Y pAginas

--- a/src/app/modules/contacto/contact/contact.component.html
+++ b/src/app/modules/contacto/contact/contact.component.html
@@ -31,7 +31,7 @@
           <textarea rows="6" placeholder="Tu Mensaje Para Nosotros" id="message" name="Comment" required
             formControlName="Comment"></textarea>
         </div>
-        <button type="submit" id="submit" [disabled]="!FormData.valid">Enviar</button>
+        <button type="submit" id="submit">Enviar</button>
       </form>
       <div id="error"></div>
       <div id="success-msg"></div>
