Cambios en el sistema de ejecucción
Se ejecuto el modo de produccion en la aplicación

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -5,19 +5,12 @@
       <li>
         <a href="./Error">San Roque En Cifras</a>
         <ul>
-          <li><a href="">Lorem ipsum dolor</a></li>
-          <li><a href="">Magna phasellus</a></li>
-          <li><a href="">Etiam dolore nisl</a></li>
           <li>
-            <a routerLink="">And a submenu &hellip;</a>
+            <a routerLink="">Proximamente &hellip;</a>
             <ul>
-              <li><a routerLink="">Lorem ipsum dolor</a></li>
-              <li><a href="">Phasellus consequat</a></li>
-              <li><a href="">Magna phasellus</a></li>
-              <li><a href="">Etiam dolore nisl</a></li>
+              <li><a routerLink="">Proximamente</a></li>
             </ul>
           </li>
-          <li><a href="">Veroeros feugiat</a></li>
         </ul>
       </li>
       <li><a href="./Error">Acerca del Proyecto</a></li>
