Actualización de metodos de Links

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,9 +1,9 @@
   <!-- Nav -->
   <nav id="nav">
     <ul>
-      <li><a href="./Inicio">Inicio</a></li>
+      <li><a routerLink="./Inicio">Inicio</a></li>
       <li>
-        <a href="./Error">San Roque En Cifras</a>
+        <a routerLink="./Error">San Roque En Cifras</a>
         <ul>
           <li>
             <a routerLink="">Proximamente &hellip;</a>
@@ -13,9 +13,9 @@
           </li>
         </ul>
       </li>
-      <li><a href="./Error">Acerca del Proyecto</a></li>
-      <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
-      <li><a href="./NuestraComunidad">Nuestra Comunidad</a></li>
-      <li><a href="./Contacto">Contactos</a></li>
+      <li><a routerLink="./Error">Acerca del Proyecto</a></li>
+      <li><a routerLink="./NuestroEquipo">Nuestro Equipo</a></li>
+      <li><a routerLink="./NuestraComunidad">Nuestra Comunidad</a></li>
+      <li><a routerLink="./Contacto">Contactos</a></li>
     </ul>
   </nav>
