--- a/src/app/layout/footer-pag/footer-pag.component.html
+++ b/src/app/layout/footer-pag/footer-pag.component.html
@@ -2,13 +2,19 @@
   <div class="container">
 
     <div class="row">
-      
+
 
     </div>
     <hr />
     <div class="row">
       <div class="col-12">
-
+        <div class="LogosCnetrados">
+          <div class="Logos">
+            <img src="images/Logos/2.png" alt="">
+            <img class="Vertical" src="images/Logos/1.png" alt="">
+            <img src="images/Logos/3.png" alt="">
+          </div>
+        </div>
         <!-- Contact -->
         <section class="contact">
           <header>
@@ -16,8 +22,10 @@
           </header>
           <p>Buscanos en Instagram o contactanos por nuestro Correo, Para conocer más sobre este proyecto</p>
           <ul class="icons">
-            <li><a href="https://www.instagram.com/tsm05_psb_sanroque/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-            <li><a href="mailto:psbsanroque@gmail.com" class="icon brands fa-google"><span class="label">Google</span></a></li>
+            <li><a href="https://www.instagram.com/tsm05_psb_sanroque/" class="icon brands fa-instagram"><span
+                  class="label">Instagram</span></a></li>
+            <li><a href="mailto:psbsanroque@gmail.com" class="icon brands fa-google"><span
+                  class="label">Google</span></a></li>
           </ul>
         </section>
 
