--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,21 +1,21 @@
   <!-- Nav -->
   <nav id="nav">
     <ul>
-      <li><a routerLink="./Inicio">Inicio</a></li>
+      <li><a href="./Inicio">Inicio</a></li>
       <li>
-        <a routerLink="./Error">San Roque En Cifras</a>
+        <a href="./SanRoqueCifras">San Roque En Cifras</a>
         <ul>
           <li>
-            <a routerLink="">Proximamente &hellip;</a>
+            <a href="ComunicacionC">Comunicacion con La Comunidad &hellip;</a>
             <ul>
-              <li><a routerLink="">Proximamente</a></li>
+              <li><a href="">Proximamente</a></li>
             </ul>
           </li>
         </ul>
       </li>
-      <li><a routerLink="./Error">Acerca del Proyecto</a></li>
-      <li><a routerLink="./NuestroEquipo">Nuestro Equipo</a></li>
-      <li><a routerLink="./NuestraComunidad">Nuestra Comunidad</a></li>
-      <li><a routerLink="./Contacto">Contactos</a></li>
+      <li><a href="./Error">Acerca del Proyecto</a></li>
+      <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
+      <li><a href="./NuestraComunidad">Nuestra Comunidad</a></li>
+      <li><a href="./Contacto">Comentarios</a></li>
     </ul>
   </nav>
