--- a/src/app/modules/comunidad/sanroque/sanroque.component.html
+++ b/src/app/modules/comunidad/sanroque/sanroque.component.html
@@ -1,62 +1,80 @@
-
 <!-- Banner -->
-<section id="banner">
+<!-- Header -->
+<div id="header">
+  <!-- Inner -->
+  <div class="inner">
     <header>
-        <h2>Conoce a la Comunidad de la vereda <strong>San Roque</strong>.</h2>
-        <p>
-            La vereda San Roque, se encuentra ubicada en el municipio de Marquetalia 
-            al oriente del departamento de Caldas, 
-            Colombia, la vereda se encuentra a una distancia aproximada de 
-            3 Km hasta el casco urbano del municipio.
-        </p>
+      <h2 style="color: #fff;">Conoce a la Comunidad de la vereda San Roque.</h2>
     </header>
-</section>
+  </div>
+</div>
+<div class="wrapper style2" id="banner">
 
-<!-- Carousel -->
-<section class="carousel">
+  <!-- Carousel -->
+  <header>
+    <h2><a>Grupo de Lideres</a></h2>
+  </header>
+  <section class="carousel">
     <div class="reel">
 
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P1.jpeg" alt="" /></a>
-        </article>
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P2.jpeg" alt="" /></a>
-        </article>
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P3.jpeg" alt="" /></a>
-        </article>
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P4.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P5.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P6.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P7.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P8.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P9.jpeg" alt="" /></a>
-        </article>
-
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P10.jpeg" alt="" /></a>
-        </article>
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P11.jpeg" alt="" /></a>
-        </article>
-        <article>
-            <a href="#" class="image featured"><img src="images/Personas/P12.jpeg" alt="" /></a>
-        </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P6.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P5.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P12.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P7.jpeg" alt="" /></a>
+      </article>
     </div>
-</section>
+  </section>
+  <header>
+    <h2><a>Grupo de Amas de Casa</a></h2>
+  </header>
+  <section class="carousel">
+    <div class="reel">
+
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P4.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P2.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P6.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P7.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P8.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P10.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P11.jpeg" alt="" /></a>
+      </article>
+    </div>
+  </section>
+  <header>
+    <h2><a>Grupo de Jornaleros</a></h2>
+  </header>
+  <section class="carousel">
+    <div class="reel">
+
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P1.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P9.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P3.jpeg" alt="" /></a>
+      </article>
+    </div>
+  </section>
+</div>
