--- a/src/app/modules/inicio/index/index.component.html
+++ b/src/app/modules/inicio/index/index.component.html
@@ -11,7 +11,7 @@
     </header>
     <div class="Logos">
       <img src="images/Logos/2.png" alt="">
-      <img class="Vertical" src="images/Logos/1.png" alt="">
+      <a href="https://www.lasalle.edu.co/" target="blank"><img class="Vertical" src="images/Logos/1.png" alt=""></a>
       <img src="images/Logos/3.png" alt="">
     </div>
     <footer>
@@ -22,28 +22,67 @@
 <!-- Main -->
 <div class="wrapper style2" id="banner">
 
-    <article id="main" class="container special">
-        <a href="#" class="image featured"><img src="images/Logos/4.png"  id="MensajeImportante" alt="" /></a>
-        <header>
-            <h2><a>¿Que es saneamiento?</a></h2>  
-        </header>
-        <p>
-            Según la OMS, Saneamiento se entiende como el suministro de instalaciones y servicios que permimiten
-            eliminar sin riesgo la orina y las heces, ademas del mantenimiento de buenas condicines de higiene,
-            gracias a sevicios como recolección de residuos sólidos y la evacuación de aguas residuales.
-        </p>
-    </article>
+  <article id="main" class="container special">
+    <a href="#" class="image featured"><img src="images/Logos/4.png" id="MensajeImportante" alt="" /></a>
+    <header>
+      <h2><a>¿Que es saneamiento?</a></h2>
+    </header>
+    <p>
+      Según la OMS, Saneamiento se entiende como el suministro de instalaciones y servicios que permimiten
+      eliminar sin riesgo la orina y las heces, ademas del mantenimiento de buenas condicines de higiene,
+      gracias a servicios como recolección de residuos sólidos y la evacuación de aguas residuales.
+    </p>
+  </article>
+  <footer>
+<div class="SubTitulos">
+  <p class="NegrillaText">Conoce los programas que hacen parte del Plan de Saneamiento Básico de la vereda San Roque</p>
+</div>
+
+    <div class="ContainerCirculos">
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <img src="../../../../images/Logos/Circulo1.png" alt="">
+          <p>Programa de Calidad de Agua</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <img src="../../../../images/Logos/Circulo2.png" alt="">
+          <p>Programa de Residuos Sólidos</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <img src="../../../../images/Logos/Circulo3.png" alt="">
+          <p>Programa de Plagas y Vectores</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <img src="../../../../images/Logos/Circulo4.png" alt="">
+          <p>Programa de Aguas Residuales</p>
+        </div>
+      </div>
+      <div class="TituloImagen">
+        <div class="DecripcionTitulo">
+          <img src="../../../../images/Logos/Circulo5.png" alt="">
+          <p>Programa de Limpieza y Desifencción</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
 <!-- Features -->
 <div class="wrapper style2">
 
-    <section id="features" class="container special">
-        <header>
-            <p>Conoce las condiciones sanitarias y medio ambientales de la comunidad la vereda San Roque</p>
-        </header>
-        <div class="CentarVideo">
-            <iframe src="https://www.youtube.com/embed/xq2roQ7jbSY" frameborder="0" allow="autoplay;picture-in-picture"></iframe>
-        </div>
-    </section>
+  <section id="features" class="container special">
+    <header>
+      <p>Conoce las condiciones sanitarias y medio ambientales de la comunidad la vereda San Roque</p>
+    </header>
+    <div class="CentarVideo">
+      <iframe src="https://www.youtube.com/embed/xq2roQ7jbSY" frameborder="0"
+        allow="autoplay;picture-in-picture"></iframe>
+    </div>
+  </section>
 
 </div>
