--- a/src/app/modules/nuestroequipo/equipo/equipo.component.html
+++ b/src/app/modules/nuestroequipo/equipo/equipo.component.html
@@ -8,90 +8,122 @@
   </div>
 </div>
 <!-- Main -->
-<div class="wrapper style1">
+<div class="wrapper style2" id="banner">
+  <header>
+    <h2><a href="https://www.lasalle.edu.co/" target="blank">Programa de ingeniería ambiental y sanitaria de La
+        Universidad de La Salle</a></h2>
+  </header>
+  <article id="main" class="container special">
+    <p>El programa de ingeniería ambiental y sanitaria de la universidad de La Salle, forma profesionales y líderes en
+      los problemas ambientales y de saneamiento básico de forma integrada, teniendo en cuenta sus dimensiones
+      ecológicas, sociales, económicas y tecnológicas, con el objetivo de promover un desarrollo sostenible en el país y
+      en el mundo. Por lo anterior, el programa dispone de materias académicas que ponen en reto la aplicación del
+      conocimiento de la ingeniería en territorios específicos con necesidades ambientales y sanitarias, con un carácter
+      profesional y de responsabilidad académica de los estudiantes.
+      Además, promueve la investigación en los estudiantes y docentes pertenecientes al programa, con la posibilidad de
+      apoyo de otras áreas académicas. Dado el tiempo de existencia en Colombia, el programa se ha caracterizado como el
+      mejor en la formación de profesionales en el área y de acreditación de alta calidad en el país.
+    </p>
+  </article>
+  <header>
+    <h2><a>Práctica de Servicio Social</a></h2>
+  </header>
+  <article id="main" class="container special">
+    <p>Es una asignatura académica de extensión social del programa de ingeniería ambiental y sanitaria de la
+      universidad de La Salle, su finalidad es enfrente al profesional en formación a problemáticas y comunidades reales
+      donde se ponen a prueba las habilidades adquiridas a lo largo de su formación, por medio de la formulación de un
+      proyecto para el bienestar de la comunidad que tienen necesidades específicas en su territorio, el proyecto es
+      realizado con la comunidad durante un lapso de tiempo semestral, con el compromiso lasallista. La importancia de
+      los proyectos de extensión social radican en mejorar la calidad de vida de las poblaciones vulnerables del país,
+      en la practicidad laboral de los futuros profesionales de Colombia y en promover la participación conjunta entre
+      diferentes actores para el desarrollo sostenible en territorios.
+    </p>
+  </article>
+</div>
+<hr />
+<div class="wrapper style2" id="banner">
 
-  <div class="container">
-    <div class="row gtr-200">
-      <div class="col-8 col-12-mobile" id="content">
-        <article id="main">
-          <header>
-            <h2><a href="#">Conoce Nuestro Equipo</a></h2>
-          </header>
-        </article>
-      </div>
-      <div class="" id="sidebar">
-        <section>
-          <header>
-            <h3><a href="#">¡Conócenos!</a></h3>
-          </header>
-          <p>
-            Somos estudiantes de decimo semestre de ingeniería ambiental y sanitaria, de
-            la Universidad de La Salle, cursando actualmente la asignatura practica de servicio social.
-            El grupo de trabajo se caracteriza por ser comprometido, generoso,
-            compasivo y un excelente sentido del humor.
-          </p>
-          <div class="row gtr-50">
-            <div class="col-4">
-              <a href="#" class="image fit ImagenPersona"><img src="images/Personas/4.jpeg" alt="" /></a>
-            </div>
-            <div class="col-8">
-              <h4>Nathaly Juliana Castillo Valderrama</h4>
-              <p>
-                Responsable y comprometida con la comunidad, dispuesta a ayudar a sus compañeros y miembros de la
-                comunidad
-                aportando con sus conocimientos en pro de mejorar las condiciones de la comunidad.
-                <br><br><br> ncastillo45@unisalle.edu.co
-              </p>
-            </div>
-            <div class="col-4">
-              <a href="#" class="image fit ImagenPersona"><img src="images/Personas/5.jpeg" alt="" /></a>
-            </div>
-            <div class="col-8">
-              <h4>Willson Smith Ortega Martinez</h4>
-              <p>
-                Servicial y con gran sentido del humor, con la capacidad de ayudar a las personas cuando lo necesitan,
-                razones por las cuales
-                esta dispuesto a aportar desde sus conocimientos.
-                <br><br><br> Wortega81@unisalle.edu.co
-              </p>
-            </div>
-            <div class="col-4">
-              <a href="#" class="image fit ImagenPersona"><img src="images/Personas/1.jpeg" alt="" /></a>
-            </div>
-            <div class="col-8">
-              <h4>María Camila Villaruel Cruz</h4>
-              <p>
-                Se caracteriza por sus grandes ideas y aspirasiones, dedicada a sus labores como profesional,
-                entregada a servir a comunidades y personas desde sus conocimientos.
-                <br><br><br> mvillaruel95@unisalle.edu.co
-              </p>
-            </div>
-            <div class="col-4">
-              <a href="#" class="image fit ImagenPersona"><img src="images/Personas/w.jpg" alt="" /></a>
-            </div>
-            <div class="col-8">
-              <h4>Yeferson Stiven Mendez Torres</h4>
-              <p>
-                Dedicado y Perfeccionista, siempre dado a el dialogo con la comunidad
-                y se entrega de lleno a el desarrollo de las activdades asignadas.
-                <br><br><br> ymendez66@unisalle.edu.co
-              </p>
-            </div>
-            <div class="col-4">
-              <a href="#" class="image fit ImagenPersona"><img src="images/Personas/2.jpeg" alt="" /></a>
-            </div>
-            <div class="col-8">
-              <h4>Laura Milena Rubiano Camacho</h4>
-              <p>
-                Emprendedora y líder innata, aprovecha oportunidades para beficios en común, directa y rápida con la
-                comunicación.
-                <br><br><br> lrubiano07@unisalle.edu.co
-              </p>
-            </div>
-          </div>
-        </section>
-      </div>
+  <header>
+    <h2><a href="#">Conoce Nuestro Equipo</a></h2>
+  </header>
+  <section class="carousel">
+    <div class="reel">
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/3.png" alt="" /></a>
+        <header>
+          <p>Nathaly Juliana Castillo Valderrama</p>
+        </header>
+        <p>
+
+          Responsable y comprometida con la comunidad, dispuesta a ayudar a sus compañeros y miembros de la
+          comunidad
+          aportando con sus conocimientos en pro de mejorar las condiciones de la comunidad.
+          ncastillo45@unisalle.edu.co
+
+        </p>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/4.png" alt="" /></a>
+        <header>
+          <p>Willson Smith Ortega Martinez</p>
+        </header>
+        <p>
+          Servicial y con gran sentido del humor, con la capacidad de ayudar a las personas cuando lo necesitan,
+          razones por las cuales
+          esta dispuesto a aportar desde sus conocimientos.
+          Wortega81@unisalle.edu.co
+          <br>
+          <br>
+        </p>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/1.png" alt="" /></a>
+        <header>
+          <p>María Camila Villaruel Cruz</p>
+        </header>
+        <p>
+          Se caracteriza por sus grandes ideas y aspirasiones, dedicada a sus labores como profesional,
+          entregada a servir a comunidades y personas desde sus conocimientos.
+          mvillaruel95@unisalle.edu.co
+          <br>
+          <br>
+        </p>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/5.png" alt="" /></a>
+        <header>
+          <p>Yeferson Stiven Mendez Torres</p>
+        </header>
+        <p>
+          Dedicado y Perfeccionista, siempre dado a el dialogo con la comunidad
+          y se entrega de lleno a el desarrollo de las activdades asignadas.
+          ymendez66@unisalle.edu.co
+          <br>
+          <br>
+          <br>
+        </p>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/2.png" alt="" /></a>
+        <header>
+          <p>Laura Milena Rubiano Camacho</p>
+        </header>
+        <p>
+          Emprendedora y líder innata, aprovecha oportunidades para beficios en común, directa y rápida con la
+          comunicación.
+          lrubiano07@unisalle.edu.co
+          <br>
+          <br>
+          <br>
+        </p>
+      </article>
     </div>
-  </div>
-
+  </section>
+</div>
+<hr/>
+<div class="wrapper style2" id="banner">
+  <header>
+    <h2><a href="#">Conoce más proyectos</a></h2>
+  </header>
+  <div class="viewDiv"><iframe src="http://www.arcgis.com/apps/opsdashboard/index.html#/aa8f6d4f685642d5a6e32c68aad9af09"></iframe></div>
 </div>
