--- a/src/app/modules/contacto/contact/contact.component.html
+++ b/src/app/modules/contacto/contact/contact.component.html
@@ -13,7 +13,7 @@
       <img class="logo" src="https://www.indonesia.travel/content/dam/indtravelrevamp/en/logo.png" />
     </div>
     <div class="right-col">
-      <h1>Contactanos</h1>
+      <h1>Dejanos tú comentario</h1>
 
       <form id="contact-form" [formGroup]="FormData" (ngSubmit)="onSubmit(FormData.value)">
         <div class="form-group">
