--- a/src/app/layout/footer-pag/footer-pag.component.css
+++ b/src/app/layout/footer-pag/footer-pag.component.css
@@ -1,10 +1,5 @@
-.LogosCentrados{
-    width: 100%;
-    justify-content: center ;
-}
 .Logos{
-    display: block;
-    margin: 0px auto;
+    text-align: center;
 }
 .Logos img{
     width: 20%;
@@ -13,4 +8,16 @@
     border-radius: 10px;
     vertical-align:middle;
     margin: 20px;
+}
+@media screen and (max-width: 736px) {
+
+    .Logos img{
+        display: block;
+        width: 40%;
+        background-color: rgba(255, 255, 255, 0.25);
+        padding: 15px;
+        border-radius: 10px;
+        margin: 20px auto;
+        margin-top: 10px;
+    }
 }
