--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -2,8 +2,10 @@
   <nav id="nav">
     <ul>
       <li><a href="./Inicio">Inicio</a></li>
-      <li>
-        <a href="./SanRoqueCifras">San Roque En Cifras</a>
+      <li><a href="./SanRoqueCifras">San Roque En Cifras</a></li>
+      <li><a href="./Error">Acerca del Proyecto</a></li>
+      <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
+      <li><a href="./NuestraComunidad">Nuestra Comunidad</a>
         <ul>
           <li>
             <a href="ComunicacionC">Comunicacion con La Comunidad &hellip;</a>
@@ -13,9 +15,6 @@
           </li>
         </ul>
       </li>
-      <li><a href="./Error">Acerca del Proyecto</a></li>
-      <li><a href="./NuestroEquipo">Nuestro Equipo</a></li>
-      <li><a href="./NuestraComunidad">Nuestra Comunidad</a></li>
       <li><a href="./Contacto">Comentarios</a></li>
     </ul>
   </nav>
