--- a/src/app/modules/cifras/cifras/cifras.component.html
+++ b/src/app/modules/cifras/cifras/cifras.component.html
@@ -11,13 +11,11 @@
     <h2><a>Acerca de San Roque</a></h2>
   </header>
   <div class="Genialy">
-    <div class="container-wrapper-genially" style="position: relative; min-height: 400px; max-width:50%;"><video
-        class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted"
-        style="position: absolute;top: 45%;left: 50%;transform: translate(-50%, -50%);width: 80px;height: 80px;margin-bottom: 10%">
+    <div class="container-wrapper-genially"><video
+        class="loader-genially" autoplay="autoplay" loop="loop" playsinline="playsInline" muted="muted">
         <source src="https://static.genial.ly/resources/panel-loader-low.mp4" type="video/mp4" />Your browser does not
         support the video tag.</video>
-      <div id="5f9c899175a47802405795aa" class="genially-embed"
-        style="margin: 0px auto; position: relative; height: auto; width: 100%;"></div>
+      <div id="5f9c899175a47802405795aa" class="genially-embed"></div>
     </div>
   </div>
 </div>
