--- a/src/app/modules/comunidad/sanroque/sanroque.component.html
+++ b/src/app/modules/comunidad/sanroque/sanroque.component.html
@@ -4,7 +4,7 @@
   <!-- Inner -->
   <div class="inner">
     <header>
-      <h2 style="color: #fff;">Conoce a la Comunidad de la vereda San Roque.</h2>
+      <p style="color: #fff;">Conoce a la Comunidad de la vereda San Roque.</p>
     </header>
   </div>
 </div>
