--- a/src/app/modules/inicio/index/index.component.css
+++ b/src/app/modules/inicio/index/index.component.css
@@ -41,3 +41,8 @@
     color: #000;
     border-bottom-color: solid;
 }
+@media screen and (max-width: 736px) {
+    .ContainerCirculos{
+        display: block;
+    }
+}
