--- a/src/app/modules/nuestroequipo/equipo/equipo.component.html
+++ b/src/app/modules/nuestroequipo/equipo/equipo.component.html
@@ -3,7 +3,7 @@
   <!-- Inner -->
   <div class="inner">
     <header>
-      <h1><a href="index.html" id="logo">Equipo de Proyectistas</a></h1>
+      <p>Equipo de Proyectistas</p>
     </header>
   </div>
 </div>
@@ -42,7 +42,6 @@
 </div>
 <hr />
 <div class="wrapper style2" id="banner">
-
   <header>
     <h2><a href="#">Conoce Nuestro Equipo</a></h2>
   </header>
@@ -120,10 +119,12 @@
     </div>
   </section>
 </div>
-<hr/>
+<hr />
+
 <div class="wrapper style2" id="banner">
   <header>
     <h2><a href="#">Conoce más proyectos</a></h2>
   </header>
-  <div class="viewDiv"><iframe src="http://www.arcgis.com/apps/opsdashboard/index.html#/aa8f6d4f685642d5a6e32c68aad9af09"></iframe></div>
+  <div class="viewDiv"><iframe
+      src="https://www.arcgis.com/apps/opsdashboard/index.html#/aa8f6d4f685642d5a6e32c68aad9af09"></iframe></div>
 </div>
