Cambios EN Archivos repetidos

--- a/src/app/modules/comunidad/sanroque/sanroque.component.html
+++ b/src/app/modules/comunidad/sanroque/sanroque.component.html
@@ -58,6 +58,12 @@
       <article>
         <a href="#" class="image featured"><img src="images/Personas/P11.jpeg" alt="" /></a>
       </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P13.jpeg" alt="" /></a>
+      </article>
+      <article>
+        <a href="#" class="image featured"><img src="images/Personas/P14.jpeg" alt="" /></a>
+      </article>
     </div>
   </section>
   <header>
