--- a/src/app/modules/inicio/index/index.component.html
+++ b/src/app/modules/inicio/index/index.component.html
@@ -66,7 +66,7 @@
       <div class="TituloImagen">
         <div class="DecripcionTitulo">
           <img src="../../../../images/Logos/Circulo5.png" alt="">
-          <p>Programa de Limpieza y Desifencción</p>
+          <p>Programa de Limpieza y Desinfección</p>
         </div>
       </div>
     </div>
